Fix alignment

--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -14,7 +14,8 @@
   float: left;
   width: 100px;
   text-align: right;
-  margin: 0 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   white-space: nowrap;
   font-weight: bold;
 }
